Fix empty CommonArea and others